[tool.poetry]
name = "pathfinding"
version = "0.1.0"
description = ""
authors = ["henkkaha <henrik.harjula@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
